# peripheralyzer

./: .clang-format  .gitignore  AGENTS.md  MANIFEST.in  README.md  map_diff.py  name_map.yml  peripheral_duplicate_finder.py  peripheralyzer.py  pyproject.toml  stm32.sh  svd.sh  test.sh  transmogrify.py
documentation/: NAME_MAP_ISSUE.md  SAFE_NAMING_WORKFLOW.md  STM32_SH_UPDATES.md
src/peripheralyzer/: __init__.py  __main__.py  cli.py  generate.py  map_diff.py  merge_name_maps.py  paths.py  peripheral_duplicate_finder.py  track_name_map_changes.py  transmogrify.py  verify_name_map.py
src/peripheralyzer/templates/: define_validate.c.jinja  define_validate.cpp.jinja  (+8 more)
templates/: define_validate.cpp.jinja  enum.h.jinja  enum.hpp.jinja  peripheral.h.jinja  peripheral.hpp.jinja  recurse_call_validate.cpp.jinja  recurse_define_validate.cpp.jinja  register.c.jinja  register.h.jinja  register.hpp.jinja  structure.h.jinja  structure.hpp.jinja  unittest.cpp.jinja
test/: enum_ascii.yml  enum_enable_32.yml  enum_letters.yml  enum_ordinals_16.yml  enum_ordinals_32.yml  enum_state.yml  peripheral_test.yml  register_double.yml  register_rgb565.yml  register_test8.yml  structure_address.yml  structure_rgb888.yml  test_register_32.yml  test_structure_16.yml  test_structure_32.yml  test_structure_8.yml
tests/: test_cli.py  test_commands.py  test_generate.py  test_generate_integration.py  test_integration.py  test_package_templates.py  test_paths.py  test_transmogrify.py
tests/data/: enum_ascii.yml  peripheral_test.yml  register_double.yml  register_rgba.yml  register_single.yml
